# avp_rag_system

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Pseudocode.g4  PseudocodeLexer.py  PseudocodeListener.py  PseudocodeParser.py  PseudocodeSyntax.md  PseudocodeVisitor.py  README.md  docker-compose.yml  generate.py  ingest.py  providers.py  pyproject.toml  retrieve.py  tracking.py
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy-gh-pages.yml  sync-hf-spaces.yml
api/: cache.py  dependencies.py  main.py  models.py  routes.py
data/: algorithms.avp  array_ops.avp  binary_search.avp  bubble_sort.avp  check_unique.avp  comparison_counting_sort.avp  hoare_partition.avp  insertion_sort.avp  linear_search.avp  logic.avp  lomuto_partition.avp  math_utils.avp  selection_sort.avp
docs/: docker-deploy.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vite.config.ts
frontend/e2e/: chat-mocked.spec.ts  chat.spec.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ChatPanel.tsx
hf-space/: README.md
tests/: conftest.py  test_fallback_integration.py  test_providers.py  test_rate_limiting.py
