[project]
name = "avp-rag-system"
version = "0.1.0"
description = "A custom RAG system for our AVPlang programming language"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.42.0",
    "antlr4-python3-runtime>=4.13.2",
    "antlr4-tools>=0.2.2",
    "chromadb>=1.3.5",
    "faiss-cpu>=1.13.1",
    "flagembedding>=1.3.5",
    "numpy>=2.3.5",
    "qdrant-client>=1.16.1",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.3.0,<4.0.0",
    "torch>=2.9.1",
    "transformers>=4.44.0,<5.0.0",
]
